# mkhl

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml
gamedir/resource/: GameMenu.res
gamedir/ui/gfx/hud/: ammo_background.tga  healtharmor_background.tga
gamedir/ui/resource/: ClientSchemeBase.res  HudAmmo.res  HudAmmoSecondary.res  HudBattery.res  HudHealth.res
src/common/: bhl_urls.h
src/common/GameUI/: IGameConsole.h  IGameUI.h  ObjectList.cpp  Random.cpp  Random.h
src/game/client/: hud.cpp
src/game/client/hud/: death_notice.cpp  death_notice.h  death_notice_panel.cpp  death_notice_panel.h
src/game/client/vgui/: CMakeLists.txt  hud_battery.cpp  hud_battery.h  hud_health.cpp  hud_health.h  viewport_panel_names.h
src/game/server/: gamerules.h  multiplay_gamerules.cpp  player.cpp  player.h  singleplay_gamerules.cpp  teamplay_gamerules.cpp  teamplay_gamerules.h  weapons.cpp  weapons.h
src/gameui/: BackgroundMenuButton.cpp  BackgroundMenuButton.h  BasePanel.cpp  BasePanel.h  BitmapImagePanel.cpp  BitmapImagePanel.h  CMakeLists.txt  ChangeGameDialog.cpp  ChangeGameDialog.h  CommandCheckButton.cpp  CommandCheckButton.h  ContentControlDialog.cpp  ContentControlDialog.h  CreateMultiplayerGameBotPage.cpp  CreateMultiplayerGameBotPage.h  CreateMultiplayerGameDialog.cpp  CreateMultiplayerGameDialog.h  CreateMultiplayerGameGameplayPage.cpp  CreateMultiplayerGameGameplayPage.h  CreateMultiplayerGameServerPage.cpp  CreateMultiplayerGameServerPage.h  CvarNegateCheckButton.cpp  CvarNegateCheckButton.h  CvarSlider.cpp  CvarSlider.h  CvarTextEntry.cpp  CvarTextEntry.h  CvarToggleCheckButton.cpp  CvarToggleCheckButton.h  DemoEditDialog.cpp  DemoEditDialog.h  DemoEventsDialog.cpp  DemoEventsDialog.h  DemoPlayerDialog.cpp  DemoPlayerDialog.h  DemoPlayerFileDialog.cpp  DemoPlayerFileDialog.h  EngineInterface.h  GameConsole.cpp  GameConsole.h  (+69 more)
src/pm_shared/: pm_shared.cpp
src/public/: cdll_int.h  convar.cpp
